--- a/notes/pubspec.yaml
+++ b/notes/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   path: ^1.9.0
   image_picker: ^1.1.1
   geolocator: ^11.1.0
+  firebase_database: ^10.5.5
+  firebase_auth: ^4.19.5
 
 dev_dependencies:
   flutter_test:
